--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 <form action="" id="capitalizer">
     <label for="capitalizeMe"></label>
     <input type="text" id="capitalizeMe" maxlength="100">
+    <br>
+    <br>
+    <button type="submit" form="capitalizer" id="capMe">Capitalize!</button>
 </form>
-<br>
-<br>
-<button type="submit" form="capitalizer">Capitalize!</button>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
