--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <br>
     <button type="submit" form="capitalizer" id="capMe">Capitalize!</button>
 </form>
-
+    <h2>Result</h2>
+    <p id="result"></p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
