commented out second input b/c it doesn't work yet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <form action="" id="capitalizer">
     <label for="capitalizeMe"></label>
     <input type="text" id="capitalizeMe" maxlength="100">
-    <input type="text" id="capitalizeMe2" maxlength="100">
+    <!-- <input type="text" id="capitalizeMe2" maxlength="100"> -->
     <br>
     <br>
     <button type="submit" form="capitalizer" id="capMe">Capitalize!</button>
